namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-delius-core-test/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-delius-core-test
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "test"
    cloud-platform.justice.gov.uk/namespace: "hmpps-delius-core-test"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "ndelius_service_team"
    cloud-platform.justice.gov.uk/application: "hmpps-delius-core"
    cloud-platform.justice.gov.uk/owner: "National Delius Service Team / Unilink <hmpps-unilink-delius@digital.justice.gov.uk>"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-delius-docker-images"
    cloud-platform.justice.gov.uk/team-name: "unilink"
    cloud-platform.justice.gov.uk/review-after: ""
